--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <title>js-html-css-boolzap</title>
 </head>
 <body>
+
+<div id="wrapper">
+    <div class="head-bg"></div>
+
+    <main class="app-container">
+        <section class="contacts-container">
+            <header>
+                <div class="user">
+                    <img src="img/user/user.png" alt="user">
+                </div>
+                <div class="tool">
+                    <i class="fas fa-circle-notch"></i>
+                    <i class="fas fa-comment-alt"></i>
+                    <i class="fas fa-ellipsis-v"></i>
+                </div>
+
+            </header>
+            <main>
+                <div class="notifications">
+
+                </div>
+                <div class="search-box">
+                    <div class="search">
+                        <i class="fas fa-search"></i>
+                        <input id="search" type="text" value="" placeholder="Cerca o inizia una nuova chat">
+                    </div>
+                </div>
+                <div class="contacts">
+
+                </div>
+            </main>
+        </section>
+
+        <section class="chat-container">
+            <header>
+
+            </header>
+
+        </section>
+
+    </main>
+
+</div>
 
 
 
