--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
             </header>
             <main>
                 <div class="notifications">
-
+                    <div class="bell">
+                        <i class="fas fa-bell-slash"></i>
+                    </div>
+                    <div class="text">
+                        <p>Ricevi notifiche di nuovi messaggi</p>
+                        <small><a href="#">Attiva notifiche desktop</a></small>
+                    </div>
                 </div>
                 <div class="search-box">
                     <div class="search">
@@ -37,7 +43,16 @@
                     </div>
                 </div>
                 <div class="contacts">
-
+                    <div class="contatto">
+                        <div class="user">
+                            <img src="img/user/user.png" alt="user">
+                        </div>
+                        <div class="text">
+                            <span class="contact-name">Michele</span>
+                            <span class="preview">asdfaf</span>
+                        </div>
+                        <span class="time">00:00</span>
+                    </div>
                 </div>
             </main>
         </section>
