Completato layout left

--- a/index.html
+++ b/index.html
@@ -43,12 +43,22 @@
                     </div>
                 </div>
                 <div class="contacts">
-                    <div class="contatto">
+                    <div class="contatto selected">
                         <div class="user">
                             <img src="img/user/user.png" alt="user">
                         </div>
                         <div class="text">
                             <span class="contact-name">Michele</span>
+                            <span class="preview">asdfaf</span>
+                        </div>
+                        <span class="time">00:00</span>
+                    </div>
+                    <div class="contatto">
+                        <div class="user">
+                            <img src="img/user/user.png" alt="user">
+                        </div>
+                        <div class="text">
+                            <span class="contact-name">Fabio</span>
                             <span class="preview">asdfaf</span>
                         </div>
                         <span class="time">00:00</span>
