--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="text">
                             <span class="contact-name">Michele</span>
-                            <span class="preview">asdfaf</span>
+                            <span class="subtitle">asdfaf</span>
                         </div>
                         <span class="time">00:00</span>
                     </div>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="text">
                             <span class="contact-name">Fabio</span>
-                            <span class="preview">asdfaf</span>
+                            <span class="subtitle">asdfaf</span>
                         </div>
                         <span class="time">00:00</span>
                     </div>
@@ -68,9 +68,37 @@
         </section>
 
         <section class="chat-container">
-            <header>
-
+            <header class="contatto">
+                <div class="user">
+                    <img src="img/user/user.png" alt="user">
+                </div>
+                <div class="text">
+                    <span class="contact-name">Michele</span>
+                    <span class="subtitle">Ultimo accesso oggi alle..</span>
+                </div>
+                <div class="tool">
+                    <i class="fas fa-search"></i>
+                    <i class="fas fa-paperclip"></i>
+                    <i class="fas fa-ellipsis-v"></i>
+                </div>
             </header>
+
+            <main>
+
+            </main>
+
+            <footer>
+                <div class="tool">
+                    <i class="far fa-smile"></i>
+                </div>
+                <div class="messaggio">
+                    <input type="text" name="" value="" placeholder="Scrivi un messaggio">
+                </div>
+                <div class="tool">
+                    <i class="fas fa-microphone"></i>
+                </div>
+
+            </footer>
 
         </section>
 
