Completato layout chat

--- a/index.html
+++ b/index.html
@@ -84,7 +84,24 @@
             </header>
 
             <main>
-
+                <div class="bubble sent">
+                    <p>
+                        Ciao come stai?
+                    </p>
+                    <small>00:00</small>
+                </div>
+                <div class="bubble received">
+                    <p>
+                        Ciao come stai?
+                    </p>
+                    <small>00:00</small>
+                </div>
+                <div class="bubble sent">
+                    <p>
+                        Ciao come stai?
+                    </p>
+                    <small>00:00</small>
+                </div>
             </main>
 
             <footer>
