Js invio messaggio + generazione contatti

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="contacts">
-                    <div class="contatto selected">
+                    <!-- <div class="contatto selected">
                         <div class="user">
                             <img src="img/user/user.png" alt="user">
                         </div>
@@ -62,7 +62,7 @@
                             <span class="subtitle">asdfaf</span>
                         </div>
                         <span class="time">00:00</span>
-                    </div>
+                    </div> -->
                 </div>
             </main>
         </section>
@@ -109,7 +109,7 @@
                     <i class="far fa-smile"></i>
                 </div>
                 <div class="messaggio">
-                    <input type="text" name="" value="" placeholder="Scrivi un messaggio">
+                    <input id="messaggio" type="text" name="" value="" placeholder="Scrivi un messaggio">
                 </div>
                 <div class="tool">
                     <i class="fas fa-microphone"></i>
@@ -120,6 +120,25 @@
         </section>
 
     </main>
+
+    <div class="template">
+        <div class="contatto">
+            <div class="user">
+                <img src="img/user/user.png" alt="user">
+            </div>
+            <div class="text">
+                <span class="contact-name">gis</span>
+                <span class="subtitle">Non poteva essere altrimenti</span>
+            </div>
+            <span class="time">00:00</span>
+        </div>
+        <div class="bubble sent">
+            <p>
+
+            </p>
+            <small></small>
+        </div>
+    </div>
 
 </div>
 
