Sistemate funzioni + risposta programmata

--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
             </p>
             <small></small>
         </div>
+        <div class="bubble received">
+            <p>
+
+            </p>
+            <small></small>
+        </div>
     </div>
 
 </div>
