--- a/index.html
+++ b/index.html
@@ -42,28 +42,7 @@
                         <input id="search" type="text" value="" placeholder="Cerca o inizia una nuova chat">
                     </div>
                 </div>
-                <div class="contacts">
-                    <!-- <div class="contatto selected">
-                        <div class="user">
-                            <img src="img/user/user.png" alt="user">
-                        </div>
-                        <div class="text">
-                            <span class="contact-name">Michele</span>
-                            <span class="subtitle">asdfaf</span>
-                        </div>
-                        <span class="time">00:00</span>
-                    </div>
-                    <div class="contatto">
-                        <div class="user">
-                            <img src="img/user/user.png" alt="user">
-                        </div>
-                        <div class="text">
-                            <span class="contact-name">Fabio</span>
-                            <span class="subtitle">asdfaf</span>
-                        </div>
-                        <span class="time">00:00</span>
-                    </div> -->
-                </div>
+                <div class="contacts"></div>
             </main>
         </section>
 
@@ -127,21 +106,17 @@
                 <img src="img/user/user.png" alt="user">
             </div>
             <div class="text">
-                <span class="contact-name">gis</span>
+                <span class="contact-name"></span>
                 <span class="subtitle">Non poteva essere altrimenti</span>
             </div>
             <span class="time">00:00</span>
         </div>
         <div class="bubble sent">
-            <p>
-
-            </p>
+            <p></p>
             <small></small>
         </div>
         <div class="bubble received">
-            <p>
-
-            </p>
+            <p></p>
             <small></small>
         </div>
     </div>
