html fix template + add arrow, css add transition, js fix function sendMessage

--- a/index.html
+++ b/index.html
@@ -64,22 +64,25 @@
 
             <main>
                 <div class="bubble sent">
-                    <p>
+                    <span class="message-text">
                         Ciao come stai?
-                    </p>
+                    </span>
                     <small>00:00</small>
+                    <i class="fas fa-chevron-down message-options"></i>
                 </div>
                 <div class="bubble received">
-                    <p>
+                    <span class="message-text">
                         Ciao come stai?
-                    </p>
+                    </span>
                     <small>00:00</small>
+                    <i class="fas fa-chevron-down message-options"></i>
                 </div>
                 <div class="bubble sent">
-                    <p>
+                    <span class="message-text">
                         Ciao come stai?
-                    </p>
+                    </span>
                     <small>00:00</small>
+                    <i class="fas fa-chevron-down message-options"></i>
                 </div>
             </main>
 
@@ -101,7 +104,7 @@
     </main>
 
     <div class="template">
-        <div class="contatto">
+        <div class="contatto" >
             <div class="user">
                 <img src="img/user/user.png" alt="user">
             </div>
@@ -111,13 +114,10 @@
             </div>
             <span class="time">00:00</span>
         </div>
-        <div class="bubble sent">
-            <p></p>
+        <div class="bubble">
+            <span class="message-text"></span>
             <small></small>
-        </div>
-        <div class="bubble received">
-            <p></p>
-            <small></small>
+            <i class="fas fa-chevron-down message-options"></i>
         </div>
     </div>
 
