Add delete message

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                     </span>
                     <small>00:00</small>
                     <i class="fas fa-chevron-down message-options"></i>
+                    <div class="message-dropdown">
+                        <span class="message-info">Message info</span>
+                        <span class="message-delete">Delete Message</span>
+                    </div>
                 </div>
                 <div class="bubble received">
                     <span class="message-text">
@@ -76,6 +80,10 @@
                     </span>
                     <small>00:00</small>
                     <i class="fas fa-chevron-down message-options"></i>
+                    <div class="message-dropdown">
+                        <span class="message-info">Message info</span>
+                        <span class="message-delete">Delete Message</span>
+                    </div>
                 </div>
                 <div class="bubble sent">
                     <span class="message-text">
@@ -83,6 +91,10 @@
                     </span>
                     <small>00:00</small>
                     <i class="fas fa-chevron-down message-options"></i>
+                    <div class="message-dropdown">
+                        <span class="message-info">Message info</span>
+                        <span class="message-delete">Delete Message</span>
+                    </div>
                 </div>
             </main>
 
@@ -118,6 +130,10 @@
             <span class="message-text"></span>
             <small></small>
             <i class="fas fa-chevron-down message-options"></i>
+            <div class="message-dropdown">
+                <span class="message-info">Message info</span>
+                <span class="message-delete">Delete Message</span>
+            </div>
         </div>
     </div>
 
