Aggiunta divisione chat

--- a/index.html
+++ b/index.html
@@ -63,6 +63,51 @@
             </header>
 
             <main>
+
+            </main>
+
+            <footer>
+                <div class="tool">
+                    <i class="far fa-smile"></i>
+                </div>
+                <div class="messaggio">
+                    <input id="messaggio" type="text" name="" value="" placeholder="Scrivi un messaggio">
+                </div>
+                <div class="tool">
+                    <i class="fas fa-microphone"></i>
+                </div>
+
+            </footer>
+
+        </section>
+
+    </main>
+
+    <div class="template">
+        <div class="contatto" >
+            <div class="user">
+                <img src="img/user/user.png" alt="user">
+            </div>
+            <div class="text">
+                <span class="contact-name"></span>
+                <span class="subtitle">Non poteva essere altrimenti</span>
+            </div>
+            <span class="time">00:00</span>
+        </div>
+        <div class="message-template">
+            <div class="bubble">
+                <span class="message-text"></span>
+                <small></small>
+                <i class="fas fa-chevron-down message-options"></i>
+                <div class="message-dropdown">
+                    <span class="message-info">Message info</span>
+                    <span class="message-delete">Delete Message</span>
+                </div>
+            </div>
+        </div>
+        <div class="chat-template">
+            <div class="chat">
+
                 <div class="bubble sent">
                     <span class="message-text">
                         Ciao come stai?
@@ -96,47 +141,9 @@
                         <span class="message-delete">Delete Message</span>
                     </div>
                 </div>
-            </main>
-
-            <footer>
-                <div class="tool">
-                    <i class="far fa-smile"></i>
-                </div>
-                <div class="messaggio">
-                    <input id="messaggio" type="text" name="" value="" placeholder="Scrivi un messaggio">
-                </div>
-                <div class="tool">
-                    <i class="fas fa-microphone"></i>
-                </div>
-
-            </footer>
-
-        </section>
-
-    </main>
-
-    <div class="template">
-        <div class="contatto" >
-            <div class="user">
-                <img src="img/user/user.png" alt="user">
-            </div>
-            <div class="text">
-                <span class="contact-name"></span>
-                <span class="subtitle">Non poteva essere altrimenti</span>
-            </div>
-            <span class="time">00:00</span>
-        </div>
-        <div class="bubble">
-            <span class="message-text"></span>
-            <small></small>
-            <i class="fas fa-chevron-down message-options"></i>
-            <div class="message-dropdown">
-                <span class="message-info">Message info</span>
-                <span class="message-delete">Delete Message</span>
             </div>
         </div>
     </div>
-
 </div>
 
 
