Fix + js function genera chat automaticamente con id

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <section class="chat-container">
             <header class="contatto">
                 <div class="user">
-                    <img src="img/user/user.png" alt="user">
+                    <img id="chat-user-img" src="img/user/user.png" alt="user" style="display:none">
                 </div>
                 <div class="text">
-                    <span class="contact-name">Michele</span>
-                    <span class="subtitle">Ultimo accesso oggi alle..</span>
+                    <span id="contact-name"></span>
+                    <span id="contact-subtitle"></span>
                 </div>
                 <div class="tool">
                     <i class="fas fa-search"></i>
