--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             </div>
             <div class="text">
                 <span class="contact-name"></span>
-                <span class="subtitle">Non poteva essere altrimenti</span>
+                <span class="contact-subtitle">Ciao come stai?</span>
             </div>
-            <span class="time">00:00</span>
+            <span class="time"></span>
         </div>
         <div class="message-template">
             <div class="bubble">
